# libctr_core

./: .gitignore  COPYING.txt  Makefile.am  README  common.mk  configure.ac  libctr_core.pc.in  meson.build
data/: ctr_core_font_data.s
include/ctr11/: ctr_console.h  ctr_freetype.h  ctr_pxi.h  ctr_screen.h
include/ctr_core/: ctr_core_circular_buffer.h  ctr_core_console.h  ctr_core_firm.h  ctr_core_freetype.h  ctr_core_headers.h  ctr_core_hid.h  ctr_core_i2c.h  ctr_core_led.h  ctr_core_pixel.hpp  ctr_core_pixel.ipp  ctr_core_pxi.h  ctr_core_screen.h  ctr_core_screen.ipp  ctr_core_surface.h  ctr_core_system.h  ctr_core_window.h  ctr_core_window.ipp
src/: Makefile.am  crt0.s  ctr11_gpu.c  ctr_circular_buffer.c  ctr_console.c  ctr_core_circular_buffer.c  ctr_core_console.c  ctr_core_console.cpp  ctr_core_firm.c  ctr_core_freetype.c  ctr_core_headers.c  ctr_core_hid.c  ctr_core_i2c.c  ctr_core_led.c  ctr_core_pixel.cpp  ctr_core_pxi.c  ctr_core_screen.c  ctr_core_screen.cpp  ctr_core_surface.c  ctr_core_surface.cpp  ctr_core_system.c  ctr_core_system.cpp  ctr_core_window.c  ctr_core_window.cpp  ctr_firm.c  ctr_freetype.c  ctr_headers.c  ctr_hid.c  ctr_pxi.c  ctr_screen.c  ctr_system.c  i2c.c  screen_init.c
